# pcode

./: .gitignore  CODER.md  Cargo.toml  LICENSE  README.md  config.toml
src/: agent.rs  config.rs  debug.rs  diff.rs  llm.rs  main.rs  patch.rs  session.rs  spinner.rs  task.rs  tools.rs
src/repl/: buffer.rs  editor.rs  helper.rs  misc.rs  mod.rs  mode.rs
src/repl/handle/: command.rs  event.rs  git.rs  insert.rs  key.rs  merge.rs  mod.rs  normal.rs  popup.rs  search.rs  visual.rs
src/tools/: ast_grep.rs  cargo.rs  common.rs  custom.rs  daemon.rs  deps.rs  dispatch.rs  fs.rs  mod.rs  patch.rs  registry.rs  tasks.rs
